// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (one-line) /src/tslint/one-line/test.ts[2, 1]: misplaced opening brace

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
function fn()
{

}

======
function fn() {}

>>>>>> after
"
`;
